DRW_debug_sphere Not Working After Overlay Refactor #72152

Closed
opened 2019-12-03 23:23:28 +01:00 by Hans Goudey · 3 comments
Member

System Information
Operating system: Linux-5.3.0-23-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: AMD Radeon VII (VEGA20, DRM 3.33.0, 5.3.0-23-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.1

Blender Version
Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-02 12:15, hash: 9516921c05
Worked: The commit before the overlay refactor commit, 1f6c3699a8

Short description of error
DRW_debug_sphere doesn't produce an output, although DRW_debug_line_v3v3 does. I bisected the issue down to the overlay refactor.

I thought this might be purposeful but because the line function still works I think it's probably a bug.

Exact steps for others to reproduce the error
Any code that calls DRW_debug_sphere doesn't work. I'm not sure how to recreate this in master but adding that to anywhere with a position should do it.
I'm testing by calling the two functions from bmesh_bevel.c

**System Information** Operating system: Linux-5.3.0-23-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: AMD Radeon VII (VEGA20, DRM 3.33.0, 5.3.0-23-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.1 **Blender Version** Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-02 12:15, hash: `9516921c05` Worked: The commit before the overlay refactor commit, 1f6c3699a836d485ed37f443cd0fcd19e978dbb6 **Short description of error** `DRW_debug_sphere` doesn't produce an output, although `DRW_debug_line_v3v3` does. I bisected the issue down to the overlay refactor. I thought this might be purposeful but because the `line` function still works I think it's probably a bug. **Exact steps for others to reproduce the error** Any code that calls `DRW_debug_sphere` doesn't work. I'm not sure how to recreate this in master but adding that to anywhere with a position should do it. I'm testing by calling the two functions from `bmesh_bevel.c`
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey changed title from `DRW_debug_line_v3v3` Not Working After Overlay Refactor to DRW_debug_line_v3v3 Not Working After Overlay Refactor 2019-12-03 23:25:47 +01:00
Hans Goudey changed title from DRW_debug_line_v3v3 Not Working After Overlay Refactor to DRW_debug_sphere Not Working After Overlay Refactor 2019-12-03 23:26:40 +01:00
Clément Foucault self-assigned this 2019-12-04 01:45:35 +01:00

This issue was referenced by 60c6a74ce1

This issue was referenced by 60c6a74ce1d3664130848d7b278d0fd1a45037be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72152
No description provided.