Fix T72152 DRW_debug_sphere Not Working After Overlay Refactor